<resources>
    <string name="app_name">M1NDBL33D</string>
    <string name="play">Play</string>
    <string name="quit">Quit</string>
    <string name="edit_name">Enter your name</string>
    <string name="submit_name">Submit Name</string>
    <string name="ask_name">What is your name?</string>
    <string name="ask_difficulty">Choose your difficulty!</string>
    <string name="easy_level">Easy</string>
    <string name="medium_level">Medium</string>
    <string name="hard_level">Hard</string>
    <string name="confirm_config">Confirm!</string>
    <string name="title_activity_confirm_config">ConfirmConfigActivity</string>
    <string name="next">Next</string>
    <string name="previous_map">Back to Map</string>
    <string name="menu">Menu</string>
    <string name="combat">Start Combat</string>
    <string name="shop">SHOP</string>
    <string name="buy_bug">BUY BUG</string>
    <string name="buy_root_kit">BUY ROOT KIT</string>
    <string name="buy_virus">BUY VIRUS</string>
    <string name="buy_range_upgrade">BUY RANGE UPGRADE</string>
    <string name="buy_power_upgrade">BUY POWER UPGRADE</string>
    <string name="title_activity_buying_tower">BuyingTowerActivity</string>
    <string name="game_over">GAME OVER</string>
    <string name="win">YOU WON!</string>
    <string name="ask_play_again">PLAY AGAIN?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="inventory">INVENTORY</string>
    <string name="previous_shop">Back to SHOP</string>
    <string name="name">NAME</string>
    <string name="money_earned">$0</string>
    <string name="num_kills">#</string>
    <string name="lives_lost">#</string>
    <string name="lives_lost_title">HEALTH LOST</string>
    <string name="money_earned_title">MONEY EARNED</string>
    <string name="kills_title">KILLS</string>
</resources>
