<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_play"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="@color/tron5"
        android:onClick="startConfiguration"
        android:text="@string/play"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_quit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <Button
        android:id="@+id/button_quit"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="@color/tron5"
        android:onClick="quitGame"
        android:text="@string/quit"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_play" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/orbitron_black"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/tron1"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/button_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>